--- a/As2Test/As2Test.csproj
+++ b/As2Test/As2Test.csproj
@@ -48,4 +48,6 @@
     </None>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties containercontrols_1json__JsonSchema="containerControls.schema.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
